yaml_parser/tests/fail/wrong-indendation-in-map.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 3, column 2
  |
3 |  wrong: 2
  |  ^
expected `...`
